add rudimentary build & run information