@@ -1,1 +1,9 @@
 # scan_and_mark
+
+
+## compile and run:
+
+* tested with Java>=17.
+* you need to have JavaFx installed, e.g. run `apt install openjfx`
+* `mvn package`
+* `java --module-path /usr/share/openjfx/lib --add-modules ALL-MODULE-PATH -jar target/SAM-1.0-SNAPSHOT-jar-with-dependencies.jar`
